--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:id="@+id/profile_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="Profile Image"
         android:scaleType="centerCrop"
-        android:src="@drawable/user_4_32"
+        android:src="@drawable/user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Notification Icon (Cart Icon) -->
 
@@ -418,7 +418,7 @@
                 android:layout_height="32dp"
                 android:layout_marginRight="40dp"
                 android:contentDescription="Home"
-                android:src="@drawable/home" />
+                android:src="@drawable/home_24px" />
 
             <ImageView
                 android:id="@+id/nav_search"
@@ -427,7 +427,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
                 android:contentDescription="Search"
-                android:src="@drawable/search_black" />
+                android:src="@drawable/search_24px" />
 
             <ImageView
                 android:id="@+id/nav_cart"
@@ -436,7 +436,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
                 android:contentDescription="Cart"
-                android:src="@drawable/orders" />
+                android:src="@drawable/shopping_bag_24px" />
 
             <ImageView
                 android:id="@+id/nav_profile"
@@ -444,7 +444,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
                 android:contentDescription="Profile"
-                android:src="@drawable/user_4_32" />
+                android:src="@drawable/user" />
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -459,6 +459,6 @@
         android:contentDescription="Cart Icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/cart" />
+        app:srcCompat="@drawable/shopping_bag_24px" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
